CMS UX improvements - clean interface and collapsed items
UX İYİLEŞTİRMELERİ:
- Remove '30+ Fuar Yönetimi' unnecessary text from labels
- Clean 'Fuar Listesi' label only
- Shorten summary format (remove sector for cleaner look)
- Set minimize_collapsed: true for collapsed list items

PREVIEW REMOVAL:
- Completely hide preview pane with multiple CSS selectors
- Force editor to full width
- Remove split view layout
- Clean, focused editing experience

COLLAPSED INTERFACE:
- Temel Bilgiler: collapsed by default
- Fuar detayları: kapalı olarak gelir
- List items: collapsed view
- Cleaner, organized interface

CLEAN LIST STYLING:
- Professional border and spacing
- Clean list header styling
- Hover effects for better UX
- Organized list item appearance

Bu CMS panel'ini daha temiz ve kullanışlı hale getirir.

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -25,17 +25,17 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
+          - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
-            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
             collapsed: false
-            minimize_collapsed: false
+            minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
                 name: "basic_info"
                 widget: "object"
-                collapsed: false
+                collapsed: true
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
@@ -70,17 +70,17 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
+          - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
-            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
             collapsed: false
-            minimize_collapsed: false
+            minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
                 name: "basic_info"
                 widget: "object"
-                collapsed: false
+                collapsed: true
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
@@ -115,17 +115,17 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
+          - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
-            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
             collapsed: false
-            minimize_collapsed: false
+            minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
                 name: "basic_info"
                 widget: "object"
-                collapsed: false
+                collapsed: true
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
@@ -160,17 +160,17 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
+          - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
-            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
             collapsed: false
-            minimize_collapsed: false
+            minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
                 name: "basic_info"
                 widget: "object"
-                collapsed: false
+                collapsed: true
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
@@ -205,17 +205,17 @@ collections:
             name: "is_active"
             widget: "boolean"
             default: true
-          - label: "📋 Fuar Listesi (30+ Fuar Yönetimi)"
+          - label: "Fuar Listesi"
             name: "fairs"
             widget: "list"
-            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}} • {{fields.basic_info.sector}}"
+            summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
             collapsed: false
-            minimize_collapsed: false
+            minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
                 name: "basic_info"
                 widget: "object"
-                collapsed: false
+                collapsed: true
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
