Fix preview hiding issue and 404 image errors
PREVIEW FIX:
- More precise CSS to hide only preview pane, not editor
- Target SplitView last child (preview) specifically
- Keep editor visible and functional
- Editor full width without breaking content

404 GÖRSEL FIX:
- Replace all leshow-logo.png → fuarlar-logo.png (exists)
- Replace all leshow-bg.jpg → fuarlar-arkaplan.jpg (exists)
- Replace all fashion-logo.png → fuarlar-logo.png (exists)
- Replace all fashion-bg.jpg → fuarlar-arkaplan.jpg (exists)

IMAGE PATH STANDARDIZATION:
- Use existing images from public/images/
- Consistent logo and background across all fairs
- No more 404 errors
- Clean image loading

Bu preview sorununu ve 404 görsel hatalarını çözecek.

--- a/src/content/fair-years/2023.yml
+++ b/src/content/fair-years/2023.yml
@@ -10,8 +10,8 @@ fairs:
       location_en: "Moscow, Russia"
       sector: "Moda ve Tekstil"
     visuals:
-      logo: "/images/leshow-logo.png"
-      background_image: "/images/leshow-bg.jpg"
+      logo: "/images/fuarlar-logo.png"
+      background_image: "/images/fuarlar-arkaplan.jpg"
     settings:
       show_in_slider: false
       show_in_forms: false
