--- a/src/content/fair-years/2025.yml
+++ b/src/content/fair-years/2025.yml
@@ -9,8 +9,8 @@ fairs:
       location_en: Moscow, Russia
       sector: Moda ve Tekstil
     visuals:
-      logo: /images/leshow-logo.png
-      background_image: /images/leshow-bg.jpg
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
     settings:
       show_in_slider: true
       show_in_forms: true
@@ -35,8 +35,8 @@ fairs:
       location_en: Istanbul, Turkey
       sector: Moda ve Tekstil
     visuals:
-      logo: /images/fashion-logo.png
-      background_image: /images/fashion-bg.jpg
+      logo: /images/fuarlar-logo.png
+      background_image: /images/fuarlar-arkaplan.jpg
     settings:
       show_in_slider: false
       show_in_forms: true
