feat: Admin panel fuar listesi kapalı gelecek şekilde düzenlendi ve HeroCard preview tasarımı card tabanlı modern tasarıma çevrildi
- Admin panelinde fuar listesi accordion'ları artık kapalı geliyor
- HeroCard arka plan ile logo üst üste modern tasarım
- İçerik kısımları düzenli card haline çevrildi
- Backdrop blur efektleri ve modern animasyonlar eklendi
- Detail view da card tabanlı tasarıma güncellendi

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -29,7 +29,7 @@ collections:
             name: "fairs"
             widget: "list"
             summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
-            collapsed: false
+            collapsed: true
             minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
@@ -74,7 +74,7 @@ collections:
             name: "fairs"
             widget: "list"
             summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
-            collapsed: false
+            collapsed: true
             minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
@@ -119,7 +119,7 @@ collections:
             name: "fairs"
             widget: "list"
             summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
-            collapsed: false
+            collapsed: true
             minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
@@ -164,7 +164,7 @@ collections:
             name: "fairs"
             widget: "list"
             summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
-            collapsed: false
+            collapsed: true
             minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
@@ -209,7 +209,7 @@ collections:
             name: "fairs"
             widget: "list"
             summary: "🎪 {{fields.basic_info.name_tr}} • {{fields.basic_info.date}} • {{fields.basic_info.location_tr}}"
-            collapsed: false
+            collapsed: true
             minimize_collapsed: true
             fields:
               - label: "📝 Temel Bilgiler"
