Update 🎪 Fuarlar “fairs_2026”

--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -75,7 +75,7 @@ fairs:
       logo: /images/fuarlar-logo.png
       background_image: /images/instagram-post.jpg
     representative:
-      name: Arzu
+      name: Arzue
       title: Satış Temsilcisi
       email: arzu@turkel.com.tr
       phone: +90 216 123 45 68
