feat: CMS basitleştirildi ve preview tamamen kaldırıldı
🎯 CMS Basitleştirme:
- Config seviyesinde preview kapatıldı (editor.preview: false)
- show_preview_links: false eklendi
- Karmaşık JavaScript kodları basitleştirildi
- Minimal styling ile temiz arayüz

📅 Tarih Widget Güncellemesi:
- Başlangıç tarihi: date widget
- Bitiş tarihi: date widget
- Tarih metni: string (görüntüleme için)

✅ Çalışan Özellikler:
- 3 slider fuarı CMS'ten başarıyla alındı
- Ana sayfa slider CMS entegrasyonu çalışıyor
- Arka plan görselleri CMS'ten yükleniyor
- Temsilci bilgileri yeni fuarlarda çalışacak

🚀 Daha Az Karmaşa:
- Preview ile uğraşmıyoruz artık
- Config seviyesinde çözüm
- Daha hızlı ve stabil CMS deneyimi

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -7,6 +7,9 @@ public_folder: "/images"
 
 locale: 'tr'
 display_url: https://turkel-web.netlify.app
+show_preview_links: false
+editor:
+  preview: false
 
 collections:
   # FUARLAR - Yıl Bazlı Yönetim
