--- a/src/content/fair-years/2026.yml
+++ b/src/content/fair-years/2026.yml
@@ -2,58 +2,6 @@ year: 2026
 is_active: true
 fairs:
   - settings:
-      show_in_slider: false
-      show_in_forms: true
-    basic_info:
-      name_tr: TEst
-      name_en: test
-      date: 12.10.2022
-      location_tr: test
-      location_en: test
-      sector: Gıda ve İçecek
-    visuals:
-      logo: /images/fuarlar-arkaplan.jpg
-      background_image: /images/fuarlar-logo.png
-  - settings:
-      show_in_slider: false
-      show_in_forms: true
-    basic_info:
-      name_tr: TEst 2
-      name_en: "test 2 "
-      date: 11 Mart 2025
-      location_tr: etewe
-      location_en: werwer
-      sector: Ev Tekstili ve Dekorasyon
-    visuals:
-      logo: /images/fuarlar-arkaplan.jpg
-      background_image: /images/fuarlar-logo.png
-  - settings:
-      show_in_slider: false
-      show_in_forms: true
-    basic_info:
-      name_tr: Test 5
-      name_en: Test 5
-      location_tr: Test 5
-      location_en: Test 5
-      sector: Ev Tekstili ve Dekorasyon
-      date: 11 11 20225
-    visuals:
-      logo: /images/fuarlar-arkaplan.jpg
-      background_image: /images/fuarlar-logo.png
-  - settings:
-      show_in_slider: false
-      show_in_forms: true
-    basic_info:
-      name_tr: test6
-      name_en: test6
-      date: 11.20.2022
-      location_tr: moskova
-      location_en: moscow
-      sector: Gıda ve İçecek
-    visuals:
-      logo: /images/fuarlar-arkaplan.jpg
-      background_image: /images/fuarlar-logo.png
-  - settings:
       show_in_slider: true
       show_in_forms: true
     slider_content:
@@ -67,7 +15,7 @@ fairs:
     basic_info:
       name_tr: Homedeco Slider Test
       name_en: Homedeco Slider Test
-      date: 11.11.2000
+      date: ""
       location_tr: kazakistan
       location_en: kazakshtan
       sector: Ev Tekstili ve Dekorasyon
