--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -42,9 +42,7 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-                  - {label: "📅 Başlangıç Tarihi", name: "start_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar başlangıç tarihi"}
-                  - {label: "📅 Bitiş Tarihi", name: "end_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar bitiş tarihi"}
-                  - {label: "📅 Tarih Metni", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Görüntüleme için tarih metni - otomatik formatlanır"}
+                  - {label: "📅 Fuar Tarihi", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Fuar tarihi - otomatik formatlanır (Örnek: 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
                   - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Güzellik ve Kozmetik", "Spor ve Fitness", "Eğitim", "Turizm", "Enerji", "Çevre", "Diğer"], allow_add: true}
@@ -116,9 +114,7 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-                  - {label: "📅 Başlangıç Tarihi", name: "start_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar başlangıç tarihi"}
-                  - {label: "📅 Bitiş Tarihi", name: "end_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar bitiş tarihi"}
-                  - {label: "📅 Tarih Metni", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Görüntüleme için tarih metni - otomatik formatlanır"}
+                  - {label: "📅 Fuar Tarihi", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Fuar tarihi - otomatik formatlanır (Örnek: 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
                   - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Güzellik ve Kozmetik", "Spor ve Fitness", "Eğitim", "Turizm", "Enerji", "Çevre", "Diğer"], allow_add: true}
@@ -190,9 +186,7 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-                  - {label: "📅 Başlangıç Tarihi", name: "start_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar başlangıç tarihi"}
-                  - {label: "📅 Bitiş Tarihi", name: "end_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar bitiş tarihi"}
-                  - {label: "📅 Tarih Metni", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Görüntüleme için tarih metni - otomatik formatlanır"}
+                  - {label: "📅 Fuar Tarihi", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Fuar tarihi - otomatik formatlanır (Örnek: 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
                   - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Güzellik ve Kozmetik", "Spor ve Fitness", "Eğitim", "Turizm", "Enerji", "Çevre", "Diğer"], allow_add: true}
@@ -264,9 +258,7 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-                  - {label: "📅 Başlangıç Tarihi", name: "start_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar başlangıç tarihi"}
-                  - {label: "📅 Bitiş Tarihi", name: "end_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar bitiş tarihi"}
-                  - {label: "📅 Tarih Metni", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Görüntüleme için tarih metni - otomatik formatlanır"}
+                  - {label: "📅 Fuar Tarihi", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Fuar tarihi - otomatik formatlanır (Örnek: 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
                   - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Güzellik ve Kozmetik", "Spor ve Fitness", "Eğitim", "Turizm", "Enerji", "Çevre", "Diğer"], allow_add: true}
@@ -338,9 +330,7 @@ collections:
                 fields:
                   - {label: "🇹🇷 Fuar Adı (Türkçe)", name: "name_tr", widget: "string", hint: "Örnek: LeShow Moskova"}
                   - {label: "🇺🇸 Fuar Adı (İngilizce)", name: "name_en", widget: "string", hint: "Örnek: LeShow Moscow"}
-                  - {label: "📅 Başlangıç Tarihi", name: "start_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar başlangıç tarihi"}
-                  - {label: "📅 Bitiş Tarihi", name: "end_date", widget: "datetime", date_format: "DD.MM.YYYY", time_format: false, hint: "Fuar bitiş tarihi"}
-                  - {label: "📅 Tarih Metni", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Görüntüleme için tarih metni - otomatik formatlanır"}
+                  - {label: "📅 Fuar Tarihi", name: "date", widget: "datetime", date_format: "DD-MM MMMM YYYY", time_format: false, hint: "Fuar tarihi - otomatik formatlanır (Örnek: 15-18 Mart 2025)"}
                   - {label: "🌍 Lokasyon (Türkçe)", name: "location_tr", widget: "string", hint: "Örnek: Moskova, Rusya"}
                   - {label: "🌍 Lokasyon (İngilizce)", name: "location_en", widget: "string", hint: "Örnek: Moscow, Russia"}
                   - {label: "🏷️ Sektör", name: "sector", widget: "select", options: ["Moda ve Tekstil", "Ev Tekstili ve Dekorasyon", "Mobilya ve Aydınlatma", "Gıda ve İçecek", "Teknoloji", "İnşaat", "Otomotiv", "Sağlık", "Güzellik ve Kozmetik", "Spor ve Fitness", "Eğitim", "Turizm", "Enerji", "Çevre", "Diğer"], allow_add: true}
